<resources>
    <string name="app_name">Iplumber</string>
    <string name="agora_app_id">33ff465b3c2243f29377b570f0bdd275</string>
    <string name="agora_access_token">00633ff465b3c2243f29377b570f0bdd275IAB2ZbnnG5BgLbb/kSq5D3/FVUp4VMG9AtPu2XGkscUR+4PgkOoAAAAAEABVqCrXgNa+YgEAAQCA1r5i</string>
    <string name="default_notification_channel_id">1</string>
    <string name="select_one">Select One-</string>
    <string name="textone">Lorem Ipsum is simply dummy text of  dummy text of typesetting industry.</string>
    <string name="i_am_a_plumber">I am a Plumber</string>
    <string name="need_a_plumber"> I need a Plumber</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_an_accoun"><u>Create an Account</u></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="email_address">Email Address</string>
    <string name="set_password">Set Password</string>
    <string name="select_language">Select language</string>
    <string name="agree_to">Agree to <font color="#A78746">Terms &amp; Conditions,Eula Agreemen </font>and <font color="#A78746">Privacy Policy </font></string>
    <string name="submit">Submit</string>
    <string name="company_name">Company Name</string>
    <string name="company_photo">Company Photo</string>
    <string name="license_number">License Number</string>
    <string name="address">Address</string>
    <string name="title_activity_home_plumber">HomePlumberAct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">subscription</string>
    <string name="title_notifications">profile</string>
    <string name="master_plumber">Master Plumber</string>
    <string name="book">BOOK</string>
    <string name="change_password"><u>CHANGE PASSWORD?</u></string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="logout">LOGOUT</string>
    <string name="setting"><u>Customer setting </u></string>
    <string name="plumber_setting"><u>Plumber setting</u></string>
    <string name="update_profile">Update Profile</string>
    <string name="booking_history">Booking History</string>
    <string name="payment">Payment</string>
    <string name="signup">SIGNUP</string>
    <string name="buy_now">Buy Now</string>
    <string name="payment_successfull">Payment Successfull</string>
    <string name="need_help"><u>Need Help</u></string>
    <string name="cancel_booking"><u>Cancel Booking</u></string>
    <string name="dowload_license"><u>Dowload License</u></string>
    <string name="dowload_Company"><u>Dowload Company Profile</u></string>
    <string name="dowload_Image"><u>Dowload Image</u></string>
    <string name="dowload_Comapny_details"><u>All Dowload Company Details</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="state">State</string>
    <string name="enter_your_firstname">Enter First Name</string>
    <string name="enter_your_last_name">Enter Last Name</string>
    <string name="enter_yourAddress">Enter Address</string>
    <string name="enter_your_city">Enter City</string>
    <string name="enter_your_state">Enter State</string>
    <string name="enter_your_zip">Enter Zip Code</string>
    <string name="enter_your_mobile">Enter Mobile Number</string>
    <string name="enter_your_password">Enter Password</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="all_permissions">Please allow all permissions.</string>
    <string name="on_error">On error</string>
    <string name="please_wait">Please wait...</string>
    <string name="permission_denied_boo">Permission Denied</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select Image From</string>
    <string name="old_password">Old Password</string>
    <string name="new_passoword">New Password</string>
    <string name="confirm_passoword">Confirm Password</string>
    <string name="save">Save</string>
    <string name="please_enter_old_pass">Enter old password.</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_enter_con_pass">Please enter confirm password</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="pass_and_confirm_pass_not_macthed">Password and confirm password is not matched.</string>
    <string name="enter_new_password">Enter New Pasword</string>
    <string name="please_enter_confirm_password">Enter New Confirm Password</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="normal_calls_are">Normal Calls are</string>
    <string name="additional_calls_are">Additional Calls are</string>
    <string name="video_call_prices">Video Call Prices: $</string>
    <string name="profile_status">Profile Status:</string>
    <string name="permisson_denied">Permission denied</string>
    <string name="per_video_call">/ per Video Call</string>
    <string name="add_card">Add Card</string>
    <string name="priceStatus">"Pay Now @ "</string>
    <string name="use_as_default_card">Use as default card</string>
    <string name="default_card">Default Card</string>
    <string name="update_card_as_default">Are you sure you want to update card as default?</string>
    <string name="remove_card_as_default">Are you sure you want to remove card from default?</string>


    <string name="order">Order :</string>

    <string name="alert">Alert</string>

    <string name="add_notification">Are you sure want to add alert .</string>

    <string name="remove_alert">Are you sure want to remove alert.</string>
    <string name="fetching_fcm_token_failed">Fetching FCM registration token failed</string>
    <string name="select_card">Select Card</string>
    <string name="enter_your_cvv">Enter your cvv</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="number_of_calls_left">Number of Calls Left:</string>
    <string name="datecol">Date : </string>
    <string name="timecol">Time : </string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_language">Change Language</string>
    <string name="confirm">Confirm</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="set_langugae">Set Langugae</string>
    <string name="next">Next</string>
    <string name="enter_firs_name">Please Enter First Name.</string>
    <string name="enter_last_name">Please Enter Last Name.</string>
    <string name="enter_company_name">Please Enter Company Name.</string>
    <string name="enter_license">Please Enter License Number.</string>
    <string name="enter_address">Please Enter Address.</string>
    <string name="enter_ciy">Please Enter City.</string>
    <string name="enter_state">Please Enter State.</string>
    <string name="enter_zip_code">Please Enter Zipcode.</string>
    <string name="enter_mobile">Please Enter Mobile Number.</string>
    <string name="enter_email">Please Enter Email.</string>
    <string name="enter_valid">Please Valid Email.</string>
    <string name="enter_video_call">Please Enter Price Video Calling.</string>
    <string name="select_language1">Please select a language</string>
    <string name="reject_call">Reject Call</string>
    <string name="answer_call">Answer Call</string>
    <string name="customer_ratings">Customer Ratings:</string>


</resources>