<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:background="@mipmap/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:padding="10sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="right"
                android:text="@string/setting"
                android:id="@+id/txtSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_gravity="center"
                android:src="@drawable/profile_circle"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:visibility="gone"
                >
            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvUserName"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="John Smiths"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvAddress"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="India"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvCity"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="Indore"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>



            <TextView
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvState"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="Indore"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>


            <TextView
                android:text="@string/zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvZipcode"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="452009"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>



            <TextView
                android:text="@string/mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvNumber"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="91- 89976546789"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="johnsmiths.test@yahoo.com"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>


            <TextView
                android:visibility="gone"
                android:text="Bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="Enter Bio"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray">

                </TextView>

            </androidx.cardview.widget.CardView>

          <RelativeLayout
              android:id="@+id/rlLang"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            >


              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/set_langugae"
                  android:textColor="@color/black"
                  android:textSize="@dimen/_14sdp" />


              <TextView
                  android:drawablePadding="@dimen/_10sdp"
                  android:drawableRight="@drawable/arw_right"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:textSize="@dimen/_14sdp" />

          </RelativeLayout>

            <TextView
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dowload_Comapny_details"
                android:textColor="@color/light_yellow"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/RRPay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/border_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="20sp"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
