<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@mipmap/bg"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/dark_black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:src="@drawable/fund"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_35sdp"
                    >

                </ImageView>

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Funds Available: $0.00"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    >

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                  <!--  <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/mySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        app:colorBorder="@color/gray"
                        app:colorOn="@color/green"
                        app:on="true"
                        app:textOff="Offline"
                        app:textOn="Online" />
-->
                </RelativeLayout>

                <LinearLayout
                    android:padding="10sp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:src="@drawable/profile_circle"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp">

                    </de.hdodenhof.circleimageview.CircleImageView>

                    <LinearLayout
                        android:padding="10sp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/customer_ratings"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            />

                        <TextView
                            android:id="@+id/videoCallPrice"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_call_prices"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            />

                        <TextView
                            android:id="@+id/profileStatus"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_status"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            />

                        <TextView
                            android:id="@+id/numberOfCalls"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_calls_left"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_8sdp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray">

            </EditText>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/RRPay"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/border_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20sp"
                android:text="BY PAYPAL"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</layout>
